# trustenroll

./: .gitignore  aerich.ini  docker-compose.yml  hasher.py  init_db.sh  pyproject.toml  requirements-bot.txt  setup_trustenroll.sh
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  admin.py  aerich.ini  api_routes.py  cache.py  exception.py  logging_config.py  main.py  middleware.py  models.py  pyproject.toml  requirements-backend.txt  routes.py  run_admin.py  schemas.py  service.py
backend/migrations/models/: 1_20250324164427_update.py
backend/templates/: base.html  dashboard.html  layout.html
backend/templates/components/: link.html
backend/templates/providers/login/: login.html
bot/: Dockerfile  bot.py  cache.py  handlers.py  logging_config.py  models.py  requirements-bot.txt  service.py  states.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/nginx/: default.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: CardList.jsx  CategoryImageSelector.jsx  HeadLinks.jsx  Header.jsx  MainCategories.jsx  SubCategories.jsx
frontend/src/components/ui/: button.jsx
frontend/src/pages/: CardsPage.jsx
migrations/models/: 0_20250321185706_init.py  2_20250325110007_update.py
